--- a/oop/diagram/system analysis&design/index.html
+++ b/oop/diagram/system analysis&design/index.html
@@ -64,7 +64,20 @@
           <span class="mdc-list-item__text"><a href="./tinhluong_sequence_diagram.html">tinhluong_sequence_diagram</a></span>
         </li>
 
+        <hr class="mdc-list-divider">
 
+        <li class="mdc-list-item padd" tabindex="0">
+          <span class="mdc-list-item__ripple"></span>
+          <span class="mdc-list-item__text"><a href="./suathongtintaikhoan_communication_diagram.html">suathongtintaikhoan_communication_diagram</a></span>
+        </li>
+        <li class="mdc-list-item padd" tabindex="0">
+          <span class="mdc-list-item__ripple"></span>
+          <span class="mdc-list-item__text"><a href="./thongkengaylamviec_communication_diagram.html">thongkengaylamviec_communication_diagram</a></span>
+        </li>
+        <li class="mdc-list-item padd" tabindex="0">
+          <span class="mdc-list-item__ripple"></span>
+          <span class="mdc-list-item__text"><a href="./tinhluong_communication_diagram.html">tinhluong_communication_diagram</a></span>
+        </li>
 
       </ul>
     </div>
